crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/unsupported_syntax/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Expected ';' but got '('
   ╭─[input.sol:4:14]
   │
 4 │ error MyError();
   │              ┬  
   │              ╰── Error occurred here.
───╯
